--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LogIn</string>
+    <string name="app_name">BoozeHound1.2</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -13,7 +13,15 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string-array name="days_array">
+    <string name="facebook_app_id">180924102397642</string>
+    <string name="fb_login_protocol_scheme">fb180924102397642</string>
+
+	<!-- Strings related to Google login -->
+	<string name="server_client_id">867219202032-rv18vbudnjme4215d0ramdqrjs09ajjl.apps.googleusercontent.com</string>
+    <string name="drawer_open" />
+    <string name="drawer_close" />
+
+    <string-array name="day_array">
         <item>Sunday</item>
         <item>Monday</item>
         <item>Tuesday</item>
@@ -22,4 +30,5 @@
         <item>Friday</item>
         <item>Saturday</item>
     </string-array>
+
 </resources>
